cluster_config_backup/2023_12_02/per_resource_api/gateways.networking.istio.io.default.bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"bookinfo-gateway","namespace":"default"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":8080,"protocol":"HTTP"}}]}}
  creationTimestamp: "2023-11-16T21:25:01Z"
  generation: 1
  name: bookinfo-gateway
  namespace: default
  resourceVersion: "6054"
  uid: dc5c0877-cac3-4413-bce0-0e0cecc90e4d
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 8080
      protocol: HTTP
